--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "openai": "^4.28.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-lazy-load-image-component": "^1.6.0",
     "react-redux": "^9.1.0",
     "react-scripts": "5.0.1",
     "tailwind-scrollbar-hide": "^1.1.7",
